# Math-Symbol-Recognizer-Using-FasterRCNN

./: .gitignore  MathSymbolDataset.py  README.md  config.json  dataset.py  eda_calibration.py  eda_crohme_whiteboard.py  faster_rcnn.py  generate_synthetic_dataset.py  inference.py  inference_dataset.py  inference_utils.py  math_symbols_dataset.py  model.py  parser.py  pyproject.toml  requirements.txt  requirements_cuda.txt  train.py  train_utils.py  utils.py
configs/: config_cpu.json  config_cuda.json
